@@ -56,7 +56,8 @@ exports.main = function() {
                 prefSet.prefs.region9,
                 prefSet.prefs.showACRTAG,
                 prefSet.prefs.showsteamrepapi,
-                prefSet.prefs.showcomparelinks
+                prefSet.prefs.showcomparelinks,
+                prefSet.prefs.show1clickgoo
             ]);
         },
         contentScriptOptions: {
